--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "bootstrap": "^5.0.0-beta3",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.2.6",
+    "mapbox-gl": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-map-gl": "^6.1.13",
@@ -24,7 +26,8 @@
     "sass": "^1.32.11",
     "styled-components": "^5.2.3",
     "typescript": "^4.2.4",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
