--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "delbo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tomerpacific.github.io/starter-project/",
   "dependencies": {
     "@coreui/coreui": "^3.4.0",
     "@coreui/react": "^3.4.6",
@@ -15,6 +16,7 @@
     "bootstrap": "^5.0.0-beta3",
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.6",
+    "gh-pages": "^5.0.0",
     "mapbox-gl": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -31,6 +33,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
